assets/css/styles.css
/* ... */
@media (min-width: 992px) {
  :root {
    --big-font-size: 1.6rem;
    --h1-font-size: 2.25rem;
    --h2-font-size: 1.5rem;
    --h3-font-size: 1.25rem;
    --h4-font-size: 1.180rem;
    --h5-font-size: 1.100rem;
    --normal-font-size: 1rem;
    --small-font-size: .975rem;
    --smaller-font-size: .813rem;
  }
}

@media (min-width: 1200px) { 
  :root {
    --big-font-size: 2rem;
    --h1-font-size: 2.8125rem;
    --h2-font-size: 1.875rem;
    --h3-font-size: 1.5625rem;
    --h4-font-size: 1.360rem;
    --h5-font-size: 1.275rem;
    --normal-font-size: 1.25rem;
    --small-font-size: 1.21875rem;
    --smaller-font-size: 1rem;
  }
}

* {
	padding: 0;
	margin: 0;
	box-sizing: border-box;
}

html {
	scroll-behavior: smooth;
}

body {
	font-family: var(--body-font);
  font-size: var(--normal-font-size);
  font-weight: var(--font-normal);
  color: var(--text-color);
  background-color: #FFF;
  position: relative;
  margin-left: auto;
  margin-right: auto;
}

h1 { font-size: var(--h1-font-size);}
h2 { font-size: var(--h2-font-size);}
h3 { font-size: var(--h3-font-size);}
h4 { font-size: var(--h4-font-size);}
h5 { font-size: var(--h5-font-size);}

ul {
    list-style: none;
}

a {
    text-decoration: none;
}

a:hover {
  text-decoration: none;
}


img {
    /* max-width: 100%; */
    height: auto;
} 

iframe {
  min-height: 400px;
  width: 100%;
  height: 100%;
}

.xs--padded {
 
}

.btn--link {
  padding: .5em 1em;
  border-radius: .2rem;
  background-color: var(--theme-color);
  font-size: var(--normal-font-size);
}

/* override input:focus border color */
.form-control:focus {
  border-color: var(--theme-color-light);
  box-shadow: inset 0 0 2px 1px var(--theme-color-dark);
}

.content__frame {
  padding: 3em 0 3em;
  margin: 0 auto;
}

.section:nth-child(odd) {
	background-color: var(--container-color-alt);
}

.section:nth-child(even) {
	background-color: var(--container-color);
}

.section__title {
	font-size: var(--h1-font-size);
  color: var(--theme-color-dark);
  font-weight: var(--font-medium);
}

.section__subtitle {
	display:  block;
	font-size:  var(--normal-font-size);
  font-weight: var(--font-medium);
  color: var(--theme-color);
  padding: 0 1.6rem;
  margin-bottom: 2rem;
}

.section__title,
.section__subtitle {
	text-align:  center;
}

@media (max-width: 575px) {
  .xs--padded {
    padding-left: 2.5em;
    padding-right: 2.5em;
  }
}

@media (max-width: 460px) {
  .xs--padded {
    padding-left: 2em;
    padding-right: 2em;
  }
} 


@media (max-width: 360px) {
  .xs--padded {
    padding-left: 24px;
    padding-right: 24px;
  }
}

@media (min-width: 576px) {
}

@media (min-width: 768px) { }

@media (min-width: 992px) { }

@media (min-width: 1200px) { 
  .content__frame {
    padding-top: 5em;
    padding-bottom: 6em;
  }
}

/* ======================= extra ======================================*/

#btnBackToTop {
  display: none;
  position: fixed;
  bottom: 1rem;
  right: 1.5rem;
  z-index: var(--z-modal);
  font-size: var(--biggest-font-size);
  font-weight: var(--font-semi-bold);
  border: none;
  outline: none;
  margin: none;
  background-color: rgba(139,65,54,0.5);
  color: var(--text-color-light);
  cursor: pointer;
  padding: .128rem .7rem;
  border-radius: 4px;
}

#btnBackToTop:hover {
  background-color: var(--theme-color-dark);
  color: var(--theme-color-light);
}

#btnBackToTop.button--show {
  display: block;
}

/* ======================= navbar ============================================*/
.navbar {
  background-color: #222;
  position: absolute;
  width: 100%;
  z-index: var(--z-modal);
}

.navbar a,
.navbar .toggler__icon {
  /* color: #fff; */
  color: var(--theme-color-light);
}

.navbar a:hover,
.navbar .toggler__icon:hover {
  text-decoration: none;
  color: var(--theme-color);
}

.navbar .brand {
  font-size: var(--big-font-size);
  padding: .25rem .75rem;
}

.navbar .nav__link {
  display: inline-block;
  margin: .312rem 0;
}

@media (min-width: 576px) { }
@media (min-width: 768px) { }
@media (min-width: 992px) { }
@media (min-width: 1200px) { }


/* ======================= main ====================================*/
main {
  width: 100%;
}


/* ======================= home / carousel ====================================*/
.home {
  padding: 0;
  margin: 0;
  /* background: linear-gradient(to bottom left, var(--theme-color) 51%, var(--theme-color-dark) 100%); */
  background-color: var(--container-color);
  color: var(--theme-color-light);
  
  position: relative;

  max-height: var(--carousel-max-height);
  height: var(--carousel-height);
  
  overflow:hidden;
}

.home a {
  color: var(--text-color-light);
}

.carousel-item-next,
.carousel-item-prev,
.carousel-item.active {
  transition: transform 1.708s ease;
}

.carousel,
.carousel-inner,
.carousel-item  {
  width: 100%;
  height: 100%;
  /* background-color: var(--container-color); */
  background-color: black;
  /* overflow:hidden; */
}

.caption--hero {
  width: 100%;
  height: 100%;
  background-color: rgba(0,0,0,0.36);
  position: absolute;
  top: 0;
  left: 0;
  text-align: left;
}

.caption--hero .container {
  position: relative;
  font-size: var(--small-font-size);
  /* font-size: var(--font-normal); */
  top: 50%;
  transform: translateY(-50%);
}


.caption--hero .container h1 {
  /* font-size: var(--h1-font-size); */
  font-weight: var(--font-semi-bold);
  letter-spacing: 0.6666rem;
  text-shadow: -0.12em 0.12em 0.2em var(--shadow-dark);
}

.caption--hero .btn--hero {
  font-size: var(--smaller-font-size);
  color: var(--theme-color-light);
  background-color: var(--theme-color); 
  border-radius: 0;
  text-shadow: 0 0.12em 0.12em var(--shadow-dark);
  box-shadow: 0 0.12em 0.12em var(--shadow-dark);
}

.caption--hero .btn--hero:hover {
  background-color: var(--theme-color-light);
  color: var(--theme-color);
  text-shadow: none;
}

.carousel {
  position:relative;
}

.carousel .carousel-item {
  /* overflow:hidden; */
}

.carousel .xs--hidden {
  display: none;
}
/* ... */

